making some improvements on the styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Psychic Game</h1>
         
         <div class="content-div">
-            <h3>Guess what letter I'm thinking of</h3>
+            <h3>Guess what letter I'm thinking of ...</h3>
             <p> Wins: <span id="wn"></span></p>
             <p> Losses: <span id="lss"></span></p>
             <p> Guesses Left: <span id="gLeft"></span></p>
